# ecommerce

./: .gitignore  pyproject.toml  requirements.txt
carrinho/: carrinho.py  context_processors.py  forms.py  urls.py  views.py
carrinho/templates/carrinho/: detalhe.html
catproduto/: admin.py  apps.py  urls.py  views.py
catproduto/migrations/: 0001_initial.py
catproduto/templates/: base.html  index.html
catproduto/templates/produtos/: categorias.html  produto.html  produtos.html
catprodutos/: apps.py  models.py  urls.py  views.py
catprodutos/migrations/: 0001_initial.py
ecommerce/: settings.py  urls.py
pagamentos/: forms.py  urls.py  views.py
pagamentos/templates/pagamento/: cancelado.html  processar.html  realizado.html
pedidos/: forms.py  models.py  urls.py  views.py
pedidos/migrations/: 0001_initial.py  0002_remove_pedido_cep_remove_pedido_cidade_and_more.py  0003_pedido_braintree_id.py
pedidos/templates/pedido/: formpedido.html  listarpedidos.html  resumopedido.html
sql/: Django_default-2024_07_24_20_23_00-dump.sql  ecommerce2024.sql
usuarios/: forms.py  urls.py  views.py
usuarios/templates/registration/: login.html
usuarios/templates/usuario/: cadusuario.html
